--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     if (index === messages.length) {
                         buttonElement.style.display = 'none';
                         setTimeout(() => {
-                            alert("Itulah yang ingin aku sampaikan. Terima kasih telah mendengarkan :)");
+                            alert("Itulah yang ingin aku sampaikan. Terima kasih telah membaca :)");
                         }, 500);
                     }
                 }, 500);
