--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </head>
 <body>
     <audio id="backgroundMusic" loop autoplay>
-        <source src="sound.mp3" type="audio/mpeg">
+        <source src="./assets/music/sound.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <button class="music-button" onclick="toggleMusic()">🎵</button>
