--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
-        /* Animasi bubble */
+        /* Background hati */
         .background-bubbles {
             position: absolute;
             top: 0;
@@ -71,28 +71,14 @@
         .bubble {
             position: absolute;
             bottom: -50px;
-            width: 20px;
-            height: 20px;
-            background: rgba(255, 255, 255, 0.4);
-            border-radius: 50%;
+            font-size: 20px;
+            color: white;
             animation: floatUp 5s infinite ease-in;
         }
         @keyframes floatUp {
             0% { transform: translateY(0) scale(1); opacity: 1; }
             50% { transform: translateY(-50vh) scale(1.2); }
             100% { transform: translateY(-100vh) scale(1.5); opacity: 0; }
-        }
-        /* Animasi hati */
-        .heart {
-            position: absolute;
-            top: -50px;
-            font-size: 30px;
-            color: #ff6b6b;
-            animation: fall 5s linear infinite;
-        }
-        @keyframes fall {
-            0% { transform: translateY(-50px) rotate(0deg); }
-            100% { transform: translateY(100vh) rotate(360deg); }
         }
     </style>
 </head>
@@ -152,9 +138,10 @@
             setInterval(() => {
                 let bubble = document.createElement('div');
                 bubble.classList.add('bubble');
+                bubble.innerHTML = '❤️';
                 bubble.style.left = Math.random() * 100 + 'vw';
                 bubble.style.animationDuration = (Math.random() * 3 + 3) + 's';
-                bubble.style.width = bubble.style.height = (Math.random() * 30 + 20) + 'px';
+                bubble.style.fontSize = (Math.random() * 20 + 20) + 'px';
                 bubbleContainer.appendChild(bubble);
 
                 setTimeout(() => {
@@ -163,22 +150,6 @@
             }, 500);
         }
         createBubbles();
-        
-        function createHearts() {
-            setInterval(() => {
-                let heart = document.createElement('div');
-                heart.classList.add('heart');
-                heart.innerHTML = '❤️';
-                heart.style.left = Math.random() * 100 + 'vw';
-                heart.style.animationDuration = (Math.random() * 3 + 2) + 's';
-                document.body.appendChild(heart);
-
-                setTimeout(() => {
-                    heart.remove();
-                }, 5000);
-            }, 300);
-        }
-        createHearts();
     </script>
 </body>
 </html>
